# nao_spy

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  common.mk  spy.py
logs/: process_logs.m
src/: fastread.cpp  log_debug.cpp  log_debug.h  nao_spy.cpp  nao_spy.h  nao_spy_main.cpp
